[package]
name = "token-handler"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.structs]
path = "../common/structs"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.chain-factory]
path = "../chain-factory"

[dependencies.multiversx-sc]
version = "=0.57.1"

[dependencies.multiversx-sc-modules]
version = "=0.57.1"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.57.1"
