[package]
name = "token-handler"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.structs]
path = "../common/structs"

[dependencies.proxies]
path = "../common/proxies"

[dependencies.error-messages]
path = "../common/error-messages"

[dependencies.chain-factory]
path = "../chain-factory"

[dependencies.multiversx-sc]
version = "=0.59.0"

[dependencies.multiversx-sc-modules]
version = "=0.59.0"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.common-test-setup]
path = "../common/common-test-setup"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.59.0"
