[package]
name = "chain-factory-meta"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["you"]

[dev-dependencies]

[dependencies.chain-factory]
path = ".."

[dependencies.multiversx-sc-meta-lib]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"
