[package]
name = "common-interactor"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
toml = "0.8.6"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.common-test-setup]
path = "../common-test-setup"

[dependencies.structs]
path = "../structs"

[dependencies.proxies]
path = "../proxies"

[dependencies.error-messages]
path = "../error-messages"

[dependencies.base64]
version = "0.21.0"
default-features = false
features = ["alloc"]

[dependencies.serde]
version = "1.0"
features = ["derive"]
