[package]
name = "common-test-setup"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs"
rev = "b59411841984a2fcbf76498d29bc131f2d433af9"

[dependencies.proxies]
path = "../proxies"

[dependencies.structs]
path = "../structs"

[dependencies.cross-chain]
path = "../cross-chain"

[dependencies.fee-market]
path = "../../fee-market"

[dependencies.header-verifier]
path = "../../header-verifier"

[dependencies.chain-config]
path = "../../chain-config"

[dependencies.testing-sc]
path = "../../testing-sc"

[dependencies.mvx-esdt-safe]
path = "../../mvx-esdt-safe"

[dependencies.chain-factory]
path = "../../chain-factory"

[dependencies.sovereign-forge]
path = "../../sovereign-forge"

[dependencies.error-messages]
path = "../error-messages"
