[package]
name = "common-test-setup"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rand_core = "0.6.4"
rand = "0.8.5"
hex = "0.4.3"

[dependencies.multiversx-sc-scenario]
version = "0.61.0"

[dependencies.proxies]
path = "../proxies"

[dependencies.structs]
path = "../structs"

[dependencies.cross-chain]
path = "../cross-chain"

[dependencies.fee-market]
path = "../../fee-market"

[dependencies.header-verifier]
path = "../../header-verifier"

[dependencies.chain-config]
path = "../../chain-config"

[dependencies.testing-sc]
path = "../../testing-sc"

[dependencies.mvx-esdt-safe]
path = "../../mvx-esdt-safe"

[dependencies.chain-factory]
path = "../../chain-factory"

[dependencies.sovereign-forge]
path = "../../sovereign-forge"

[dependencies.sov-fee-market]
path = "../../sov-fee-market"

[dependencies.error-messages]
path = "../error-messages"
