[package]
name = "common-tests-setup"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc-scenario]
version = "0.57.1"

[dependencies.proxies]
path = "../proxies"

[dependencies.structs]
path = "../structs"

[dependencies.cross-chain]
path = "../cross-chain"

[dependencies.fee-market]
path = "../../fee-market"

[dependencies.header-verifier]
path = "../../header-verifier"

[dependencies.chain-config]
path = "../../chain-config"

[dependencies.testing-sc]
path = "../../testing-sc"

[dependencies.mvx-esdt-safe]
path = "../../mvx-esdt-safe"
